tests/type-errors/compare_list_list.arl
archetype compare_list_list

entry exec() {
  effect {
    var a : list<int> = [0i];
    var b : list<int> = [1i];
    do_require (a = b, "ko")
  }
}
